#209 - Adjust logic to have all parameters under ‘parameters’ task property